<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:weightSum="100" android:background="@drawable/background_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="65">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="37dp"
                android:paddingTop="12dp"
                android:paddingRight="12dp"
                android:layout_height="37dp"
                android:src="@drawable/cogwheel"
                android:clickable="true"
                android:id="@+id/cogwheel"
                android:layout_gravity="right"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="UNIBOT"
                android:textSize="70dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:textColor="#FFFFFF"


                android:id="@+id/textView" />
        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hovedbygning"
            android:id="@+id/imageView3"
            android:adjustViewBounds="true"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Use the chat option to explore opportunities and submit your interests. Based on what you submit, UNIBOT is able to give study recommendations"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"

            android:id="@+id/textView2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You can edit your account information from the settings meny in the top right corner"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"

            android:id="@+id/textView3" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="35">

        <View android:layout_height="2px"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/explore"

            android:background="@drawable/hover_button"
            android:textColor="#FFFFFF"
            android:layout_weight="16.75"
            android:text="Chat with unibot" android:textSize="18dp"
            />
            />

        <View android:layout_height="2px"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
            android:layout_below="@+id/register"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recommendation"
            android:layout_below="@id/explore"
            android:background="@drawable/hover_button"
            android:textColor="#FFFFFF"
            android:layout_weight="16.75"
            android:text="Recommendation" android:textSize="18dp"

            />

        <View android:layout_height="2px"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
            android:layout_below="@+id/explore"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aboutUnibot"
            android:layout_weight="16.75"

            android:layout_below="@+id/recommendation"
            android:background="@drawable/hover_button"
            android:textColor="#FFFFFF"
            android:text="About unibot" android:textSize="18dp"


            />
        <View android:layout_height="2px"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
            android:layout_below="@+id/aboutUnibot"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aboutUs"
            android:layout_weight="16.75"

            android:layout_below="@+id/aboutUnibot"
            android:background="@drawable/hover_button"
            android:textColor="#FFFFFF"
            android:text="About us" android:textSize="18dp"


            />
        <View android:layout_height="2px"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
            android:layout_below="@+id/aboutUnibot"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signOut"
            android:layout_weight="16.75"

            android:layout_below="@+id/aboutUs"
            android:background="@drawable/hover_button"
            android:textColor="#FFFFFF"
            android:text="Sign out" android:textSize="18dp"


            />
        <View android:layout_height="2px"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
            android:layout_below="@+id/signOut"
            />


    </LinearLayout>

</LinearLayout>